sasql/tests/compile_fail/multiple_statements.rs
fn main() {
    let _ = sasql::query!("SELECT 1; SELECT 2");
}
